# fleece-rs

./: .gitignore  1000people.fleece  1person.fleece  Cargo.toml  README.md
benches/: decode.rs  encode.rs  fetch.rs  fleece_bench.rs  iter.rs
src/: alloced.rs  de.rs  encoder.rs  error.rs  lib.rs  mutable.rs  scope.rs  ser.rs  shared_keys.rs  sharedkeys.rs  tests.rs
src/encoder/: encodable.rs  error.rs  mod.rs  value_stack.rs
src/mutable/: array.rs  dict.rs
src/raw/: array.rs  mod.rs  pointer.rs  sized.rs  value.rs  varint.rs
src/value/: array.rs  dict.rs  error.rs  mod.rs  pointer.rs  sized.rs  varint.rs
tests/: serde.rs
