[package]
name = "fleece-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1

[dependencies]
thiserror = "1.0.56"
rangemap = "1.5.1"
log = "0.4.22"

[dev-dependencies]
criterion = { version = "0.5.1" }
env_logger = "0.11.3"
rayon = "1.10.0"

[profile.bench]
codegen-units = 1
opt-level = 2

[[bench]]
name = "decode"
harness = false

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "iter"
harness = false

[lints.clippy]
pedantic = { priority = -1, level = "warn" }
module_name_repetitions = "allow"
