[package]
name = "fleece"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1

[dependencies]
thiserror = "1.0.56"
serde = { version = "1.0.204", optional = true }
serde_json = { version = "1.0.120", optional = true }
lazy_static = "1.5.0"
rangemap = "1.5.1"
crossbeam-utils = "0.8.20"
folklore = "0.8.0"
fixedstr = "0.5.7"

[features]
defaults = ["serde"]
serde = ["dep:serde", "dep:serde_json"]

[dev-dependencies]
criterion = { version = "0.5.1" }
serde = "1.0.204"

[profile.bench]
codegen-units = 1
opt-level = 2

[[bench]]
name = "decode"
harness = false

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "iter"
harness = false

[lints.clippy]
pedantic = { priority = -1, level = "warn" }
module_name_repetitions = "allow"
